2002-05-28  Theodore A. Roth  <troth@verinet.com>

	* Makefile.in: Add support for AVR target.
	* configure.tgt: Add support for AVR target.
	* avr-tdep.c: New file.
	* config/avr/avr.mt: New file.

2002-05-23  Andrew Cagney  <ac131313@redhat.com>

	From Ross Alexander at NEC Europe:
	* config/pa/hpux11w.mh (NATDEPFILES): Add solib.o.

2002-05-23  Andrew Cagney  <ac131313@redhat.com>

	* PROBLEMS: Mention s390 and FreeBSD 4.4 build problems.

2002-05-22  Michal Ludvig  <mludvig@suse.cz>

	* dwarf2cfi.c (frame_state_for): Added safety check for a valid
	fde->cie_ptr.
	(dwarf2_build_frame_info): Corrected handling of eh_frame.
	(dwarf2_build_frame_info): Add offset to fde->initial_location 
	so that frames of shared libraries are mapped correctly.
	(execute_stack_op): Change type of 'result' from ULONGEST to
	CORE_ADDR.
	
2002-05-14  Michal Ludvig  <mludvig@suse.cz>

	Merge from mainline:

	2002-05-14  Michal Ludvig  <mludvig@suse.cz>
	* dwarf2cfi.c (context_cpy): Copy registers correctly.
	(update_context): Use __func__ in warnings.
	
	2002-05-07  Michal Ludvig  <mludvig@suse.cz>
	* dwarf2cfi.c: Code cleanup, removed unused variables,
	added default labels to switch {} statements.

2002-05-01  Andreas Schwab  <schwab@suse.de>

	* config/s390/s390.mh (NATDEPFILES): Remove solib.o, add
	linux-proc.o and gcore.o.

2002-04-30  Michael Chastain  <mec@shout.net>

	Merge from trunk.  This also fixes PR gdb/172.

	2002-04-25  Pierre Muller  <muller@ics.u-strasbg.fr>

	Fix PR gdb/508.
	* symfile.c (add_filename_language): Fix wrong xrealloc size argument.

2002-04-29  GDB Administrator  <gdbadmin@sourceware.cygnus.com>

	* version.in: Bump to version 5.2.0-0000-00-00-cvs.

2002-04-26  GDB Administrator  <gdbadmin@sourceware.cygnus.com>

	GDB 5.2 Released.
	* version.in: Update to version 5.2.

2002-04-26  Michal Ludvig  <mludvig@suse.cz>

	* x86-64-tdep.c (x86_64_skip_prologue): Print note when debugging
	code without frame pointers.
